--- a/src/Tarifa/BankMore.Tarifa.Api/BankMore.Tarifa.Api.csproj
+++ b/src/Tarifa/BankMore.Tarifa.Api/BankMore.Tarifa.Api.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\BankMore.Tarifa.Application\BankMore.Tarifa.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
