--- a/src/Tarifa/BankMore.Tarifa.Application/BankMore.Tarifa.Application.csproj
+++ b/src/Tarifa/BankMore.Tarifa.Application/BankMore.Tarifa.Application.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\BankMore.Tarifa.Domain\BankMore.Tarifa.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Services\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
