--- a/src/Transferencia/BankMore.Transferencia.Infrastructure/BankMore.Transferencia.Infrastructure.csproj
+++ b/src/Transferencia/BankMore.Transferencia.Infrastructure/BankMore.Transferencia.Infrastructure.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BankMore.Transferencia.Application\BankMore.Transferencia.Application.csproj" />
     <ProjectReference Include="..\BankMore.Transferencia.Domain\BankMore.Transferencia.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
   </ItemGroup>
 
 </Project>
