--- a/src/Tarifa/BankMore.Tarifa.Domain/BankMore.Tarifa.Domain.csproj
+++ b/src/Tarifa/BankMore.Tarifa.Domain/BankMore.Tarifa.Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
