--- a/src/Transferencia/BankMore.Transferencia.Api/BankMore.Transferencia.Api.csproj
+++ b/src/Transferencia/BankMore.Transferencia.Api/BankMore.Transferencia.Api.csproj
@@ -10,12 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BankMore.Transferencia.Application\BankMore.Transferencia.Application.csproj" />
+    <ProjectReference Include="..\BankMore.Transferencia.Infrastructure\BankMore.Transferencia.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
