--- a/src/Transferencia/BankMore.Transferencia.Application/BankMore.Transferencia.Application.csproj
+++ b/src/Transferencia/BankMore.Transferencia.Application/BankMore.Transferencia.Application.csproj
@@ -12,16 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Services\" />
-    <Folder Include="Queries\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="HttpClientFactoryLite" Version="0.4.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.3.0" />
+    <PackageReference Include="ServiceStack.Interfaces" Version="8.8.0" />
   </ItemGroup>
 
 </Project>
